--- a/source/_posts/抗锯齿技术.md
+++ b/source/_posts/抗锯齿技术.md
@@ -1,12 +1,19 @@
+---
+title: 抗锯齿技术
+date: 2022/11/25 14:00:00
+comments: true
+author:杨基伟
+tags:
+- Display
+categories:
+- 技术分享
+---
+
+
+
 # 抗锯齿技术
 
 Author: Jiwei
-
-Date:2022/11/25
-
-Display Weekly Training&Discussion
-
-
 
 ## 抗锯齿技术发展史
 
