--- a/source/_posts/抗锯齿技术.md
+++ b/source/_posts/抗锯齿技术.md
@@ -9,9 +9,9 @@ categories:
 - 技术分享
 ---
 
-## 抗锯齿技术发展史
-
 抗锯齿技术（Anti-Aliasing，简称AA）是计算机图形学中的一项重要技术，用于减少图像边缘出现的锯齿状走样效果。随着计算机图形技术的发展，人们提出了多种抗锯齿技术，其中包括SSAA、MSAA、FXAA、TAA、MLAA、SMAA、CMAA、DLSS 1.0、FSR和DLSS 2.0。
+
+<!--more-->
 
 ##### 第一阶段（2000年左右）：硬件抗锯齿
 
